添加全景地图

--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no,width=device-width" />
+
     <title>我的地图</title>
+
+
+    <!--引入样式文件-->
+    <link rel="stylesheet" href="style.css">
+
+<!--引入百度地图的API-->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Mx4xR2dXcBb66OGn0TzZxhmr46d1eqSZ"></script>
+
 </head>
 <body>
 
-我是大英雄
+<div id="mapContainer"></div>
 
+<script src="app.js"></script>
 </body>
 </html>
