--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
 </head>
 <body>
 
+<div class="searchView">
+    <input type="text" placeholder="起始点">
+    <input type="text" placeholder="目的地">
+    <button>搜索</button>
+</div>
+
+<!--显示地图的容器-->
 <div id="mapContainer"></div>
+
+<!--呈现 搜索结果的容器-->
+<div id="showResult"></div>
 
 <script src="app.js"></script>
 </body>
